welcome.lessons.welcome.array.averagevalue.AverageValue.scala.error
averageValue:7: error: type mismatch;
 found   : Unit
 required: Int
}
^